cursief def. + help chatbot => support chatbot

--- a/voorstel/VanDorpeLukas-BPvoorstel.tex
+++ b/voorstel/VanDorpeLukas-BPvoorstel.tex
@@ -59,7 +59,7 @@
 \begin{document}
 
 \begin{abstract}
-  Dankzij nieuwe technologieën is het huren van een locker op festivals eenvoudig. Bij de locker units van het bedrijf Lockit Rentals kunnen lockers geopend worden met behulp van QR-codes, deze worden voor aanvang van het evenement online verkocht. QR-codes zijn zo ontworpen dat deze niet kunnen onthouden worden. Wanneer de QR-code scanner moeite heeft met het symbool uit te lezen of bezoekers hun QR-code verliezen, spelen ze hierdoor de toegang tot hun locker kwijt. Implementatie van nieuwe technologieën kan ervoor zorgen dat de QR-code scanners geoptimaliseerd worden. Bij verlies van de toegangscode, kan de huurder rekenen op een geautomatiseerde help chatbot die hun assisteert om verloren QR-codes opnieuw te genereren. Dit resulteert in meer gebruiksgemak naar de klanten toe en minder moeilijkheden tijdens uitbating van lockers.
+  Dankzij nieuwe technologieën is het huren van een locker op festivals eenvoudig. Bij de locker units van het bedrijf Lockit Rentals kunnen lockers geopend worden met behulp van QR-codes, deze worden voor aanvang van het evenement online verkocht. QR-codes zijn zo ontworpen dat deze niet kunnen onthouden worden. Wanneer de QR-code scanner moeite heeft met het symbool uit te lezen of bezoekers hun QR-code verliezen, spelen ze hierdoor de toegang tot hun locker kwijt. Implementatie van nieuwe technologieën kan ervoor zorgen dat de QR-code scanners geoptimaliseerd worden. Bij verlies van de toegangscode, kan de huurder rekenen op een geautomatiseerde support chatbot die hun assisteert om verloren QR-codes opnieuw te genereren. Dit resulteert in meer gebruiksgemak naar de klanten toe en minder moeilijkheden tijdens uitbating van lockers.
   
 \end{abstract}
 
@@ -75,11 +75,10 @@
 %TODO toegangsticket op andere lijn kijken om volgende lijn te zetten ja of nee
 
 %TODO oplijsting van festival bandjes veranderen
+
 Tegenwoordig staan festivals en evenementen heel ver op het vlak van technologie. Toegangstickets zijn voorzien van QR-codes en kunnen online gekocht worden, geld opladen op festival bandjes, bezoekers kunnen hiermee overal contactloos betalen met NFC chips,\dots De innovatie om de lockerverhuur op evenementen te digitaliseren en te moderniseren komt vanuit de veranderde noden en behoeften van festivalgangers. Onderzoek zal doeltreffend zijn voor de implementatie van gebruiksvriendelijke technieken bij de verhuur van lockers.
 
 Begin 2022 kwamen de oprichters van Lockit Rentals, Wannes Van Dorpe en Sebastien Vandenhouten, op de markt met nieuwe QR-units. Bij het huren van een locker ontvangt de klant een QR-code die als toegangscode dient voor het openen van een kluisje. Met die unieke QR-code kunnen klanten hun persoonlijke spullen veilig opbergen en de locker onbeperkt openen voor een vaste opgelegde periode. 
-
-%TODO in de hardware als in de software
 
 Bij Lockit Rentals zijn er twee opties om lockers te verhuren. De eerste mogelijkheid is het verkopen van gedrukte kaartjes met QR-codes aan de kassa. Dit brengt echter hoge personeelskosten met zich mee. Daarnaast kan men ook kiezen om de QR-units standalone uit te baten. Dit houdt in dat Lockit Rentals de units op locatie levert en vanop afstand alles monitort. Hierbij worden de QR-codes online verkocht. De problemen ontstaan als de QR-codes niet meer uitgelezen kunnen worden of wanneer de klant zijn/haar QR-code verliest. Deze problemen kunnen zowel gebaseerd zijn op een fout in de hardware als in de software. Vanuit deze probleemstelling formuleert dit onderzoek een oplossing.  
 
@@ -99,7 +98,7 @@ De laatste jaren zijn nifDeuwe technologieën op de markt gekomen voor het opene
 \subsection{QR-codes}}%
 \label{sec:QR-codes}
 
-Een QR-code is een machinaal leesbaar optisch label met informatie over het bijhorend product \autocite{Chang2014}. In dit onderzoek is het product de toegangscode voor het openen van een locker. QR-code staat voor Quick Response code en is een soort matrix streepjes code \autocite{Tiwari2016}. Het is een tweedimensionale code die informatie, zoals tekst, URL of andere data bevat \autocite{Shin2012}. De QR-codes zijn zodanig ontworpen dat ze door een smartphone uitgelezen kunnen worden aan een hoge snelheid \autocite{Tiwari2016}. De grootte van de QR-code kan aangepast worden naarmate de hoeveelheid data die hierin gestockeerd moet worden \autocite{Tiwari2016}. Deze eigenschappen zijn zeer voordelig bij het geven van dergelijke QR-codes die dienen als toegangscode.
+Een QR-code is een machinaal leesbaar optisch label met informatie over het bijhorend product \autocite{Chang2014}. In dit onderzoek is het product de toegangscode voor het openen van een locker. QR-code staat voor \textit{Quick Response code} en is een soort matrix streepjes code \autocite{Tiwari2016}. Het is een tweedimensionale code die informatie, zoals tekst, URL of andere data bevat \autocite{Shin2012}. De QR-codes zijn zodanig ontworpen dat ze door een smartphone uitgelezen kunnen worden aan een hoge snelheid \autocite{Tiwari2016}. De grootte van de QR-code kan aangepast worden naarmate de hoeveelheid data die hierin gestockeerd moet worden \autocite{Tiwari2016}. Deze eigenschappen zijn zeer voordelig bij het geven van dergelijke QR-codes die dienen als toegangscode.
 
 Het gebruik van QR-codes als toegangscode kan leiden tot enkele risico’s. Zo is het bijvoorbeeld onmogelijk om een QR-code te onthouden. Daarnaast kan de scanner van een QR-unit beschadigd of defect raken. Het is noodzakelijk dat de informatie die ze bevatten snel kan worden uitgelezen, ook al zijn bepaalde delen van het symbool beschadigd. Hierbij hebben QR-codes het voordeel dat ze een foutcorrectiefunctie bevatten zodat een QR-code die 30\% beschadigd of bevlekt is nog steeds kan worden uitgelezen \autocite{Tiwari2016}. QR-codes zijn ook ontworpen zodanig dat ze vanuit elke hoek scanbaar zijn. Dit is één van de voordelen van de tweedimensionale eigenschap van de QR-code \autocite{Incorporated2014}. 
 
