--- a/voorstel/voorstel.bib
+++ b/voorstel/voorstel.bib
@@ -95,4 +95,11 @@
   pages  = {2581-9429},
 }
 
+@WWW{Cloud,
+  author  = {Google},
+  title   = {Documentation Dialogflow},
+  url     = {https://cloud.google.com/dialogflow},
+  urldate = {2023-02-13},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
