update bp proef eerste inleiding

--- a/bachproef/standvanzaken.tex
+++ b/bachproef/standvanzaken.tex
@@ -7,11 +7,43 @@
 
 % Pas na deze inleidende paragraaf komt de eerste sectiehoofding.
 
-Dit hoofdstuk bevat je literatuurstudie. De inhoud gaat verder op de inleiding, maar zal het onderwerp van de bachelorproef *diepgaand* uitspitten. De bedoeling is dat de lezer na lezing van dit hoofdstuk helemaal op de hoogte is van de huidige stand van zaken (state-of-the-art) in het onderzoeksdomein. Iemand die niet vertrouwd is met het onderwerp, weet nu voldoende om de rest van het verhaal te kunnen volgen, zonder dat die er nog andere informatie moet over opzoeken \autocite{Pollefliet2011}.
+%\lipsum[7-20]
 
-Je verwijst bij elke bewering die je doet, vakterm die je introduceert, enz.\ naar je bronnen. In \LaTeX{} kan dat met het commando \texttt{$\backslash${textcite\{\}}} of \texttt{$\backslash${autocite\{\}}}. Als argument van het commando geef je de ``sleutel'' van een ``record'' in een bibliografische databank in het Bib\LaTeX{}-formaat (een tekstbestand). Als je expliciet naar de auteur verwijst in de zin, gebruik je \texttt{$\backslash${}textcite\{\}}.
-Soms wil je de auteur niet expliciet vernoemen, dan gebruik je \texttt{$\backslash${}autocite\{\}}. In de volgende paragraaf een voorbeeld van elk.
+\section{Wie is Lockit Rentals}%
+\label{sec:stand-van-zaken}
 
-\textcite{Knuth1998} schreef een van de standaardwerken over sorteer- en zoekalgoritmen. Experten zijn het erover eens dat cloud computing een interessante opportuniteit vormen, zowel voor gebruikers als voor dienstverleners op vlak van informatietechnologie~\autocite{Creeger2009}.
 
-\lipsum[7-20]
+Lockit Rentals is een naam onder het bedrijf VD Group BV. Deze is opgericht op 6 november 2019 door Sébastien Vandenhouten en Wannes Van Dorpe met als doel lockers te verhuren op evenementen. Enkele maanden na de oprichting begon de covid-19 crisis die de volledige sector tot stilstand deed komen. Na de crisis werd er direct geïnvesteerd in nieuwe lockers. Niet de gewone traditionele lockers, maar speciale technologische lockers die nog niet beschikbaar waren in België. De lockers werden in een mum van tijd omgebouwd tot QR-smart locker units met daarin lockers. Zo zijn er in het voorjaar van 2022, 13 units geproduceerd door Lockit Rentals. Op de dag van vandaag wordt er ijverig gezocht naar nieuwe investeerders om hun vloot van units uit te breiden.
+
+Er zijn verschillende manieren om smart lockers systemen te gaan produceren. Hieronder volgt een opsomming van de verschillende smart lockers systemen elk met hun eigenschappen. Deze methodes zijn opgesteld door Lockit Rentals om hun marktonderzoek te starten.
+\\
+\textbf{Pincode:}
+\begin{itemize}
+    \item Kan vergeten worden
+    \item Manuele verkoop mogelijk
+    \item 100\% online verkoop mogelijk
+    \item Trage verwerking bij openen van locker (pincode moet manueel worden ingetypt)
+    \item Spieken is mogelijk waardoor er risico’s tot diefstal    
+\end{itemize}
+    
+\newpage
+\textbf{Rfid Badge:}
+\begin{itemize}
+    \item Kan verloren gaan
+    \item Manuele verkoop mogelijk
+    \item Geen online verkoop mogelijk
+    \item Snelle verwerking bij openen locker (scan en go)
+    \item Spieken is niet mogelijk
+    \item Fysiek object nodig + aankoop kost van badges    
+\end{itemize}
+
+\textbf{QR  code:}
+\begin{itemize}
+    \item Kan niet vergeten worden (kan ook niet onthouden worden)
+    \item Manuele verkoop mogelijk
+    \item 100\% online verkoop mogelijk
+    \item Snelle verwerking bij openen lockers (scan QR-code en go)
+    \item Spieken is niet mogelijk
+    \item Technisch een veelvoud aan vereenvoudigingen mogelijk    
+\end{itemize}
+
