--- a/bachproef/VanDorpeLukasBP.tex
+++ b/bachproef/VanDorpeLukasBP.tex
@@ -15,11 +15,14 @@
 \usepackage{comment} 
 %% Pictures to include in the text can be put in the graphics/ folder
 \graphicspath{{graphics/}}
+\usepackage{minted}
+
+%For displaying codeblocks :
 
 %% For source code highlighting, requires pygments to be installed
 %% Compile with the -shell-escape flag!
 \usepackage[section]{minted}
-\usemintedstyle{solarized-light}
+\usemintedstyle{monokai}
 \definecolor{bg}{RGB}{253,246,227} %% Set the background color of the codeframe
 
 \usepackage[printonlyused]{acronym}
@@ -54,7 +57,7 @@
 \author{Lukas Van Dorpe}
 \supervisor{Dhr. L. Blondeel}
 \cosupervisor{Dhr. S. Vandenhoutem}
-\title[Optionele ondertitel]%
+\title%[Optionele ondertitel]%
     {Ontwikkeling van gebruiksvriendelijke technologieën in het optimaliseren van lockerverhuur.}
 \academicyear{\advance\year by -1 \the\year--\advance\year by 1 \the\year}
 \examperiod{1}
