--- a/bachproef/bachproef.bib
+++ b/bachproef/bachproef.bib
@@ -104,4 +104,10 @@
   urldate = {2023-03-30},
 }
 
+@SoftwareModule{docs2023,
+  author = {Mollie docs},
+  url    = {https://docs.mollie.com/reference/v2/payments-api/create-payment},
+  year   = {2023},
+}
+
 @Comment{jabref-meta: databaseType:biblatex;}
